--- a/app/src/main/res/layout/layout_eclipse_center.xml
+++ b/app/src/main/res/layout/layout_eclipse_center.xml
@@ -1,324 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/rl_eclipse_center"
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/app_bar"/>
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <include
-                layout="@layout/view_current_event"
-                android:visibility="gone"
-                android:id="@+id/current_event_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/default_margin"/>
-
-            <org.eclipsesoundscapes.views.CountdownView
-                android:id="@+id/eclipse_countdown"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:focusable="true"
+                android:id="@+id/rl_eclipse_center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/eclipse_type_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/eclipse_type}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/eclipse_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:gravity="end"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:focusable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/date_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/date}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:gravity="end"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:focusable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2">
-                <TextView
-                    android:id="@+id/latitude_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/location_latitude}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/latitude"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:gravity="end"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:focusable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/longitude_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/location_longitude}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/longitude"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:gravity="end"
-                    android:maxLines="2"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:focusable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/percent_eclipse_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/percent_eclipse}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/percent_eclipse"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:layout_weight="1"
-                    android:maxLines="2"
-                    android:gravity="end"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/duration_totality_layout"
-                android:focusable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/duration_totality_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    app:eclipseCenterText="@{@string/totality_duration}"
-                    android:textSize="@dimen/default_text_size"
-                    android:maxLines="2"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/duration_totality"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="@dimen/default_text_size"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:maxLines="2" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/eclipse_event_layout"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:background="@color/colorPrimary"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:contentDescription="@string/event_section_desc"
-                android:weightSum="3">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-condensed"
-                    android:gravity="center_horizontal"
-                    android:text="@string/eclipse_event"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/default_text_size"
-                    android:textStyle="bold"
-                    android:importantForAccessibility="no" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-condensed"
-                    android:gravity="center_horizontal"
-                    android:text="@string/local_time"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/default_text_size"
-                    android:textStyle="bold"
-                    android:importantForAccessibility="no" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-condensed"
-                    android:gravity="center_horizontal"
-                    android:text="@string/time_ut"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/default_text_size"
-                    android:textStyle="bold"
-                    android:importantForAccessibility="no" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_margin"
+                android:layout_marginBottom="@dimen/margin_small"
                 android:orientation="vertical"
-                android:layout_marginBottom="32dp">
+                android:gravity="center">
+
+                <include
+                    layout="@layout/view_current_event"
+                    android:visibility="gone"
+                    android:id="@+id/current_event_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:layout_marginBottom="@dimen/default_margin"/>
+
+                <TextView
+                    style="@style/EclipseCenterTitleText"
+                    android:id="@+id/info_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/next_eclipse_info"/>
+
+                <include
+                    android:id="@+id/stub_type"
+                    layout="@layout/layout_eclipse_center_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <include
+                    android:id="@+id/stub_date"
+                    layout="@layout/layout_eclipse_center_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_extra_small"/>
+
+                <org.eclipsesoundscapes.views.CountdownView
+                    android:id="@+id/eclipse_countdown"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    style="@style/EclipseCenterTitleText"
+                    android:id="@+id/next_eclipse_location_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/next_eclipse_user_location"
+                    android:layout_marginBottom="@dimen/margin_small"/>
+
+                <include
+                    android:id="@+id/stub_percent"
+                    layout="@layout/layout_eclipse_center_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_small"/>
+
+                <include
+                    android:id="@+id/stub_duration"
+                    layout="@layout/layout_eclipse_center_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_small"
+                    android:visibility="gone"/>
 
                 <include
                     android:id="@+id/stub_contact_one"
                     layout="@layout/layout_eclipse_event_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/margin_small"/>
 
                 <include
                     android:id="@+id/stub_contact_two"
                     layout="@layout/layout_eclipse_event_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/margin_small"/>
 
                 <include
                     android:id="@+id/stub_contact_mid"
                     layout="@layout/layout_eclipse_event_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/margin_small"/>
 
                 <include
                     android:id="@+id/stub_contact_three"
                     layout="@layout/layout_eclipse_event_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/margin_small"/>
 
                 <include
                     android:id="@+id/stub_contact_four"
                     layout="@layout/layout_eclipse_event_row"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/margin_small"/>
+
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
 </layout>
