--- a/app/src/main/res/layout/layout_eclipse_event_row.xml
+++ b/app/src/main/res/layout/layout_eclipse_event_row.xml
@@ -2,57 +2,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="horizontal"
     android:focusable="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
+        style="@style/EclipseCenterItemText"
         android:id="@+id/eclipse_event"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:gravity="center_horizontal"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="@dimen/default_text_size"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/eclipse_time_local"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:text="Start of partial eclipse:"/>
 
     <TextView
+        style="@style/EclipseCenterValueText"
         android:id="@+id/eclipse_time_local"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="@dimen/default_text_size"
-        android:maxLines="1"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeStepGranularity="2sp"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/eclipse_event"
-        app:layout_constraintEnd_toStartOf="@+id/eclipse_time_ut"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="12:00PM"/>
 
     <TextView
-        android:id="@+id/eclipse_time_ut"
+        style="@style/EclipseCenterValueText"
+        android:id="@+id/eclipse_time_utc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:gravity="center_horizontal"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="@dimen/default_text_size"
-        android:maxLines="1"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeStepGranularity="2sp"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/eclipse_time_local"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/eclipse_time_local"
+        app:layout_constraintStart_toStartOf="@+id/eclipse_time_local"
+        app:layout_constraintEnd_toEndOf="@+id/eclipse_time_local"
+        tools:text="4:00PM"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
