--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <resources>
     <dimen name="default_text_size">18sp</dimen>
-    <dimen name="secondary_text_size">16sp</dimen>
+    <dimen name="secondary_text_size">14sp</dimen>
     <dimen name="title_text_size">21sp</dimen>
 
     <dimen name="default_margin">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_extra_small">4dp</dimen>
     <dimen name="default_button_size">48dp</dimen>
 
     <dimen name="list_item_text_edge_padding_start">72dp</dimen>
