--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,45 @@
         <item name="android:windowSharedElementsUseOverlay">false</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TextAppearance.App.SubTitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextAppearance.App.SubTitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextAppearance.App.Body1" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">@dimen/default_text_size</item>
+    </style>
+
+    <style name="EclipseCenterTitleText" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:layout_marginTop">@dimen/default_margin</item>
+        <item name="android:layout_marginBottom">@dimen/margin_extra_small</item>
+        <item name="android:textAppearance">@style/TextAppearance.App.SubTitle1</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="EclipseCenterItemText" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.App.SubTitle2</item>
+        <item name="android:gravity">start</item>
+        <item name="android:maxLines">2</item>
+    </style>
+
+    <style name="EclipseCenterValueText" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:textAppearance">@style/TextAppearance.App.Body1</item>
+        <item name="android:gravity">end</item>
+        <item name="android:maxLines">2</item>
+    </style>
 </resources>
